# linear-regression

./: README.md  pyproject.toml  regression.ipynb  world-happiness-report-2019.csv
