[tool.poetry]
name = "linear-regression"
version = "0.1.0"
description = ""
authors = ["Sean Hawkins <Seanh@zillowgroup.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.1"
matplotlib = "^3.3.3"
sklearn = "^0.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
